--- a/MPU6050_V1/MPU6050_V1.ioc
+++ b/MPU6050_V1/MPU6050_V1.ioc
@@ -16,8 +16,9 @@ Mcu.IP1=LPUART1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=NUCLEO-G474RE
-Mcu.IPNb=6
+Mcu.IP5=TIM1
+Mcu.IP6=NUCLEO-G474RE
+Mcu.IPNb=7
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -27,6 +28,8 @@ Mcu.Pin11=PB7
 Mcu.Pin12=PB8-BOOT0
 Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin14=VP_SYS_VS_DBSignals
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM1_VS_no_output1
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
@@ -35,7 +38,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=15
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -52,6 +55,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_SWDIO
@@ -143,7 +147,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -196,10 +200,18 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=Prescaler,PeriodNoDither,Channel-Output Compare1 No Output
+TIM1.PeriodNoDither=999
+TIM1.Prescaler=16999
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 board=NUCLEO-G474RE
 boardIOC=true
 isbadioc=false
