--- a/MPU6050_Liblary/MPU6050_Liblary.ioc
+++ b/MPU6050_Liblary/MPU6050_Liblary.ioc
@@ -16,28 +16,31 @@ Mcu.IP1=LPUART1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IP6=NUCLEO-G474RE
-Mcu.IPNb=7
+Mcu.IP5=TIM1
+Mcu.IP6=TIM3
+Mcu.IP7=NUCLEO-G474RE
+Mcu.IPNb=8
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB3
-Mcu.Pin11=PB8-BOOT0
-Mcu.Pin12=PB9
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_SYS_VS_DBSignals
-Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PA14
+Mcu.Pin11=PB3
+Mcu.Pin12=PB8-BOOT0
+Mcu.Pin13=PB9
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_SYS_VS_DBSignals
+Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=16
+Mcu.Pin5=PC0
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA13
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -54,6 +57,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.GPIOParameters=GPIO_Label
@@ -90,6 +94,7 @@ PB8-BOOT0.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
+PC0.Signal=S_TIM1_CH1
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=B1 [blue push button]
 PC13.Locked=true
@@ -146,7 +151,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -199,6 +204,12 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
+SH.S_TIM1_CH1.ConfNb=1
+TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM1.IPParameters=Prescaler,PeriodNoDither,Channel-Input_Capture1_from_TI1
+TIM1.PeriodNoDither=999
+TIM1.Prescaler=16999
 TIM3.IPParameters=Prescaler,PeriodNoDither
 TIM3.PeriodNoDither=999
 TIM3.Prescaler=16999
@@ -206,6 +217,8 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-G474RE
