--- a/Serwomotor_V1/Serwomotor_V1.ioc
+++ b/Serwomotor_V1/Serwomotor_V1.ioc
@@ -23,9 +23,10 @@ Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA14
 Mcu.Pin11=PB3
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_SYS_VS_DBSignals
-Mcu.Pin14=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin12=PB4
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_SYS_VS_DBSignals
+Mcu.Pin15=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
@@ -34,7 +35,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PB14
 Mcu.Pin9=PA13
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -82,6 +83,8 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB4.Locked=true
+PB4.Signal=S_TIM16_CH1
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=B1 [blue push button]
 PC13.Locked=true
@@ -193,11 +196,13 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM15_CH1.0=TIM15_CH1,PWM Generation1 CH1
 SH.S_TIM15_CH1.ConfNb=1
+SH.S_TIM16_CH1.0=TIM16_CH1
+SH.S_TIM16_CH1.ConfNb=1
 TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM15.IPParameters=Channel-PWM Generation1 CH1,Prescaler,PeriodNoDither,AutoReloadPreload
-TIM15.PeriodNoDither=999
-TIM15.Prescaler=3399
+TIM15.PeriodNoDither=19999
+TIM15.Prescaler=169
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
