--- a/Serwomotor_V1/Serwomotor_V1.ioc
+++ b/Serwomotor_V1/Serwomotor_V1.ioc
@@ -14,9 +14,10 @@ Mcu.IP0=LPUART1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM15
-Mcu.IP5=NUCLEO-G474RE
-Mcu.IPNb=6
+Mcu.IP4=TIM1
+Mcu.IP5=TIM15
+Mcu.IP6=NUCLEO-G474RE
+Mcu.IPNb=7
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -26,7 +27,8 @@ Mcu.Pin11=PB3
 Mcu.Pin12=PB4
 Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin14=VP_SYS_VS_DBSignals
-Mcu.Pin15=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
@@ -35,7 +37,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PB14
 Mcu.Pin9=PA13
-Mcu.PinsNb=16
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -52,6 +54,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_SWDIO
@@ -141,7 +144,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM15_Init-TIM15-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM15_Init-TIM15-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -198,6 +201,9 @@ SH.S_TIM15_CH1.0=TIM15_CH1,PWM Generation1 CH1
 SH.S_TIM15_CH1.ConfNb=1
 SH.S_TIM16_CH1.0=TIM16_CH1
 SH.S_TIM16_CH1.ConfNb=1
+TIM1.IPParameters=Prescaler,PeriodNoDither
+TIM1.PeriodNoDither=999
+TIM1.Prescaler=16999
 TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM15.IPParameters=Channel-PWM Generation1 CH1,Prescaler,PeriodNoDither,AutoReloadPreload
@@ -209,6 +215,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM15_VS_ClockSourceINT.Mode=Internal
 VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=NUCLEO-G474RE
 boardIOC=true
 isbadioc=false
