--- a/Serwomotor_V1/Serwomotor_V1.ioc
+++ b/Serwomotor_V1/Serwomotor_V1.ioc
@@ -16,8 +16,9 @@ Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM15
-Mcu.IP6=NUCLEO-G474RE
-Mcu.IPNb=7
+Mcu.IP6=TIM20
+Mcu.IP7=NUCLEO-G474RE
+Mcu.IPNb=8
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -29,6 +30,7 @@ Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin14=VP_SYS_VS_DBSignals
 Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin16=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM20_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
@@ -37,7 +39,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PB14
 Mcu.Pin9=PA13
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -55,6 +57,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
+NVIC.TIM20_UP_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_SWDIO
@@ -202,13 +205,16 @@ SH.S_TIM15_CH1.ConfNb=1
 SH.S_TIM16_CH1.0=TIM16_CH1
 SH.S_TIM16_CH1.ConfNb=1
 TIM1.IPParameters=Prescaler,PeriodNoDither
-TIM1.PeriodNoDither=999
+TIM1.PeriodNoDither=9999
 TIM1.Prescaler=16999
 TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM15.IPParameters=Channel-PWM Generation1 CH1,Prescaler,PeriodNoDither,AutoReloadPreload
 TIM15.PeriodNoDither=19999
 TIM15.Prescaler=169
+TIM20.IPParameters=Prescaler,PeriodNoDither
+TIM20.PeriodNoDither=9999
+TIM20.Prescaler=16999
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
@@ -217,6 +223,8 @@ VP_TIM15_VS_ClockSourceINT.Mode=Internal
 VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM20_VS_ClockSourceINT.Mode=Internal
+VP_TIM20_VS_ClockSourceINT.Signal=TIM20_VS_ClockSourceINT
 board=NUCLEO-G474RE
 boardIOC=true
 isbadioc=false
