--- a/Serwomotor_V1/Serwomotor_V1.ioc
+++ b/Serwomotor_V1/Serwomotor_V1.ioc
@@ -158,7 +158,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM15_Init-TIM15-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM20_Init-TIM20-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM15_Init-TIM15-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM20_Init-TIM20-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -217,14 +217,14 @@ SH.S_TIM16_CH1.0=TIM16_CH1
 SH.S_TIM16_CH1.ConfNb=1
 TIM1.IPParameters=Prescaler,PeriodNoDither
 TIM1.PeriodNoDither=999
-TIM1.Prescaler=16999
+TIM1.Prescaler=1699
 TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM15.IPParameters=Channel-PWM Generation1 CH1,Prescaler,PeriodNoDither,AutoReloadPreload
 TIM15.PeriodNoDither=19999
 TIM15.Prescaler=169
 TIM20.IPParameters=Prescaler,PeriodNoDither
-TIM20.PeriodNoDither=9999
+TIM20.PeriodNoDither=99
 TIM20.Prescaler=16999
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
