--- a/TestingMotorsWithPWM/TestingMotorsWithPWM.ioc
+++ b/TestingMotorsWithPWM/TestingMotorsWithPWM.ioc
@@ -13,29 +13,32 @@ Mcu.IP0=LPUART1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM4
-Mcu.IP5=NUCLEO-G474RE
-Mcu.IPNb=6
+Mcu.IP4=TIM2
+Mcu.IP5=TIM4
+Mcu.IP6=NUCLEO-G474RE
+Mcu.IPNb=7
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB3
-Mcu.Pin13=PB6
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_SYS_VS_DBSignals
-Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PB10
+Mcu.Pin11=PA8
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB3
+Mcu.Pin15=PB6
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_SYS_VS_DBSignals
+Mcu.Pin18=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PB10
-Mcu.Pin9=PA8
-Mcu.PinsNb=17
+Mcu.Pin5=PA0
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -53,6 +56,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.Signal=S_TIM2_CH1
+PA1.Signal=S_TIM2_CH2
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_SWDIO
 PA13.Locked=true
@@ -200,8 +205,15 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM2_CH1.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=PeriodNoDither,EncoderMode
+TIM2.PeriodNoDither=659
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,PeriodNoDither
 TIM4.PeriodNoDither=99
