added timer with global interrupts

--- a/TestingMotorsWithPWM/TestingMotorsWithPWM.ioc
+++ b/TestingMotorsWithPWM/TestingMotorsWithPWM.ioc
@@ -13,10 +13,11 @@ Mcu.IP0=LPUART1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=TIM4
-Mcu.IP6=NUCLEO-G474RE
-Mcu.IPNb=7
+Mcu.IP4=TIM1
+Mcu.IP5=TIM2
+Mcu.IP6=TIM4
+Mcu.IP7=NUCLEO-G474RE
+Mcu.IPNb=8
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -29,8 +30,10 @@ Mcu.Pin14=PB3
 Mcu.Pin15=PB6
 Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin17=VP_SYS_VS_DBSignals
-Mcu.Pin18=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM1_VS_no_output1
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
@@ -38,7 +41,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=19
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -55,6 +58,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Signal=S_TIM2_CH1
 PA1.Signal=S_TIM2_CH2
@@ -152,7 +156,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -211,9 +215,14 @@ SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
 SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
+TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,PeriodNoDither
+TIM1.PeriodNoDither=99
+TIM1.Prescaler=16999
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
-TIM2.IPParameters=PeriodNoDither,EncoderMode
-TIM2.PeriodNoDither=659
+TIM2.IC2Filter=10
+TIM2.IPParameters=PeriodNoDither,EncoderMode,IC2Filter
+TIM2.PeriodNoDither=4294967295
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,PeriodNoDither
 TIM4.PeriodNoDither=99
@@ -222,6 +231,10 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=NUCLEO-G474RE
