--- a/BallancingRobot_V1/BallancingRobot_V1.ioc
+++ b/BallancingRobot_V1/BallancingRobot_V1.ioc
@@ -60,17 +60,19 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=EncoderA_SigB
 PA1.Signal=S_TIM5_CH2
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=MotorBDir2
+PA10.GPIO_Label=MotorB_Dir2
 PA10.Locked=true
 PA10.Signal=GPIO_Output
 PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=MotorBDir1
+PA11.GPIO_Label=MotorB_Dir1
 PA11.Locked=true
 PA11.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=EncoderB_SigA
 PA5.Signal=S_TIM2_CH1_ETR
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=MotorA_PWM
@@ -80,12 +82,16 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=MotorB_PWM
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=MotorA_Dir1
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=MotorADir2
+PB15.GPIO_Label=MotorA_Dir2
 PB15.Locked=true
 PB15.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=EncoderB_SigB
 PB3.Signal=S_TIM2_CH2
 PB6.Locked=true
 PB6.Mode=I2C
@@ -133,7 +139,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -181,6 +187,12 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
 TIM1.Period=99
 TIM1.Prescaler=9599
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IC2Filter=10
+TIM2.IPParameters=IC2Filter,EncoderMode
+TIM5.EncoderMode=TIM_ENCODERMODE_TI12
+TIM5.IC2Filter=10
+TIM5.IPParameters=EncoderMode,IC2Filter
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
