--- a/BallancingRobot_V1/BallancingRobot_V1.ioc
+++ b/BallancingRobot_V1/BallancingRobot_V1.ioc
@@ -12,8 +12,9 @@ Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM2
-Mcu.IP6=TIM5
-Mcu.IPNb=7
+Mcu.IP6=TIM4
+Mcu.IP7=TIM5
+Mcu.IPNb=8
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC14-OSC32_IN
@@ -29,6 +30,8 @@ Mcu.Pin17=PB7
 Mcu.Pin18=VP_SYS_VS_Systick
 Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PH0 - OSC_IN
+Mcu.Pin20=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM4_VS_no_output1
 Mcu.Pin3=PH1 - OSC_OUT
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
@@ -36,7 +39,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA8
-Mcu.PinsNb=20
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -52,6 +55,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM4_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=EncoderA_SigA
@@ -191,6 +195,10 @@ TIM1.Prescaler=95
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 TIM2.IC2Filter=10
 TIM2.IPParameters=IC2Filter,EncoderMode
+TIM4.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM4.IPParameters=Prescaler,Period,Channel-Output Compare1 No Output
+TIM4.Period=99
+TIM4.Prescaler=9599
 TIM5.EncoderMode=TIM_ENCODERMODE_TI12
 TIM5.IC2Filter=10
 TIM5.IPParameters=EncoderMode,IC2Filter
@@ -198,5 +206,9 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM4_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM4_VS_no_output1.Signal=TIM4_VS_no_output1
 board=custom
 isbadioc=false
