--- a/BallancingRobot_V1/BallancingRobot_V1.ioc
+++ b/BallancingRobot_V1/BallancingRobot_V1.ioc
@@ -143,7 +143,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -200,8 +200,9 @@ TIM4.IPParameters=Prescaler,Period,Channel-Output Compare1 No Output
 TIM4.Period=99
 TIM4.Prescaler=9599
 TIM5.EncoderMode=TIM_ENCODERMODE_TI12
+TIM5.IC1Filter=10
 TIM5.IC2Filter=10
-TIM5.IPParameters=EncoderMode,IC2Filter
+TIM5.IPParameters=EncoderMode,IC2Filter,IC1Filter
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
