--- a/TestingMotorsWithPWM/TestingMotorsWithPWM.ioc
+++ b/TestingMotorsWithPWM/TestingMotorsWithPWM.ioc
@@ -156,7 +156,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -220,8 +220,9 @@ TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,PeriodNoDither
 TIM1.PeriodNoDither=99
 TIM1.Prescaler=16999
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IC1Filter=10
 TIM2.IC2Filter=10
-TIM2.IPParameters=PeriodNoDither,EncoderMode,IC2Filter
+TIM2.IPParameters=PeriodNoDither,EncoderMode,IC2Filter,IC1Filter
 TIM2.PeriodNoDither=4294967295
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,PeriodNoDither
