--- a/BallancingRobot_V1/BallancingRobot_V1.ioc
+++ b/BallancingRobot_V1/BallancingRobot_V1.ioc
@@ -150,7 +150,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -197,15 +197,15 @@ TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,OCMode_PWM-PWM Generation2 CH2
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_PWM1
-TIM1.Period=99
-TIM1.Prescaler=95
+TIM1.Period=999
+TIM1.Prescaler=3
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 TIM2.IC2Filter=10
 TIM2.IPParameters=IC2Filter,EncoderMode
 TIM4.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM4.IPParameters=Prescaler,Period,Channel-Output Compare1 No Output
 TIM4.Period=99
-TIM4.Prescaler=9599
+TIM4.Prescaler=4799
 TIM5.EncoderMode=TIM_ENCODERMODE_TI12
 TIM5.IC1Filter=10
 TIM5.IC2Filter=10
